src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/* ----- NAV BAR ----- */
.nav-bar {
    background-color: #34A0A4;
    color: #0c2a54;
    border-bottom: 1px solid #D9ED92;
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
  }
  #title {
    font-size: 30px;
  }
  .nav-items {
    display: flex;
    margin: 7px;
    width: 100%;
    justify-content: center;
    gap: 20px;
  }
  #nav-item {
    padding: 7px;
    margin: 7px;
    border: solid 3px #0c2a54;
    background-color: #D9ED92;
    box-shadow: -5px 5px #0c2a54;
    color: #0c2a54;
    font-weight: bold;
  }

  /* ----- LINK STUFF ----- */
a:link { text-decoration: none; }
a:visited { 
  text-decoration: none; 
  color: #0c2a54;
}
a:hover { 
  text-decoration: none; 
  color:#17b3a4; 
}
/* ----- FOOTER ----- */
footer {
  background-color: #392F5A;
  color: white;
  padding: 2rem;
}
.footer-container {
  display: flex;
  justify-content: space-between;
  align-items: flex-start;
}
.footer-logo {
  flex: 0.5;
  padding-top: 20px;
}
.footer-columns {
  display: flex;
  justify-content: space-evenly;
  flex: 3;
}
.footer-column {
  margin-right: 1rem;
}
.footer-column h4 {
  margin-bottom: 1rem;
}
.footer-column ul {
  list-style: none;
  padding: 0;
}
.footer-column ul li {
  margin-bottom: 0.5rem;
}
.footer-column ul li a {
  color: #ccc;
  text-decoration: none;
}
.footer-column ul li a:hover {
  color: white;
  text-decoration: underline;
}

